Feature: Fix Issue from ai by ai. Author: Ryan Date: 2026-01-09